# tsf-paperkit

./: .gitignore  README.md  pyproject.toml
.claude/skills/tsf-data/: SKILL.md
.claude/skills/tsf-doctor/: SKILL.md
.claude/skills/tsf-report/: SKILL.md
.claude/skills/tsf-run/: SKILL.md
.codex/skills/: .sync-manifest.json
.codex/skills/tsf-data/: SKILL.md
.codex/skills/tsf-models/: SKILL.md
agent-skills/tsf-check/: SKILL.md
agent-skills/tsf-data/: SKILL.md
agent-skills/tsf-models/: SKILL.md
configs/: ablation_example.yaml  dataset_registry.yaml  dataset_sources.yaml  example.yaml  model_registry.yaml
configs/candidate/: exchange_rate_smoke.yaml
configs/common-long-term/: weather_smoke.yaml
configs/ett/: etth1_patchtst_smoke.yaml  etth1_smoke.yaml  etth2_smoke.yaml  ettm1_smoke.yaml  ettm2_smoke.yaml
docs/: dataset-sources.md  model-adapters.md
examples/: run_toy_example.sh  toy_series.csv
scripts/: smoke_cuda.py  sync_agent_skills.py
tests/: test_fairness_checks.py  test_metrics.py  test_model_adapters.py  test_registries_and_skills.py  test_table_generation.py  test_windowing.py
tsf_paperkit/: __init__.py  cli.py
tsf_paperkit/ablation/: manager.py
tsf_paperkit/checks/: fairness.py
tsf_paperkit/data/: csv_loader.py  registry.py  scaler.py  windowing.py
tsf_paperkit/metrics/: forecasting.py
tsf_paperkit/models/: adapter_contract.py  assets.py  base.py  dlinear.py  linear.py  naive.py  patchtst.py  registry.py
tsf_paperkit/reporting/: latex.py  table.py
tsf_paperkit/runner/: evaluator.py  experiment.py  trainer.py
(+9 files in other folders)
