[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsf-paperkit"
version = "0.1.0"
description = "Paper-ready experiment harness for time-series forecasting."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "tsf-paperkit contributors"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "PyYAML>=6.0",
  "typer>=0.9",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
patchtst = ["einops>=0.7"]
research-adapters = ["einops>=0.7"]
foundation-adapters = ["huggingface-hub>=0.23", "transformers>=4.40"]
adapters = ["einops>=0.7", "huggingface-hub>=0.23", "transformers>=4.40"]

[project.scripts]
tsf-paperkit = "tsf_paperkit.cli:app"

[tool.setuptools.packages.find]
include = ["tsf_paperkit*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
